--- a/package.json
+++ b/package.json
@@ -23,6 +23,8 @@
     "@angular/ssr": "^17.0.3",
     "express": "^4.18.2",
     "rxjs": "~7.8.0",
+    "socket.io": "^4.7.2",
+    "socket.io-client": "^4.7.2",
     "tslib": "^2.3.0",
     "zone.js": "~0.14.2"
   },
@@ -40,5 +42,10 @@
     "karma-jasmine": "~5.1.0",
     "karma-jasmine-html-reporter": "~2.1.0",
     "typescript": "~5.2.2"
-  }
+  },
+  "description": "This project was generated with [Angular CLI](https://github.com/angular/angular-cli) version 17.0.3.",
+  "main": "index.js",
+  "keywords": [],
+  "author": "",
+  "license": "ISC"
 }
